Handled scrollbar & other fixes

--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,44 @@
 .full-height {
   height: 100%;
 }
+.cart-icon {
+  width: 48px;
+}
+
+/* Categoty Layout CSS Start */
 
 .category-frame {
   padding: 0;
+  height: 100%;
+  max-height: calc(100vh - 80px);
 }
+
+.category-frame:hover {
+  overflow: overlay;
+}
+
+.category-frame::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px transparent;
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+.category-frame::-webkit-scrollbar {
+  width: 5px;
+  left: 0;
+  background-color: transparent;
+}
+
+.category-frame::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 6px transparent;
+  background: rgba(0, 0, 0, 0.7);
+}
+
 .category-frame .card {
   margin: 0 10px 10px 0;
 }
+
 .card-body {
   padding: 5px;
 }
@@ -40,19 +71,58 @@
   margin: 0;
 }
 
+/* Categoty Layout CSS End */
+
+/* Product Layout CSS Start */
+
 .product-display {
   padding: 0;
+  height: 100%;
+  max-height: calc(100vh - 80px);
+}
+
+.product-display:hover {
+  overflow: overlay;
 }
 
 .product-display .card {
   width: 48%;
   display: inline-block;
+  /* margin: 0 0 10px 10px; */
   margin: 0 10px 10px 0;
 }
+
+.product-display::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px transparent;
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+.product-display::-webkit-scrollbar {
+  width: 5px;
+  left: 0;
+  background-color: transparent;
+}
+
+.product-display::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 6px transparent;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+/* Product Layout CSS End */
+
+/* Order Layout CSS Start */
 
 .order-tray {
   border: 2px solid #dee2e6;
   border-radius: 5px;
+  height: 100%;
+  max-height: calc(100vh - 80px);
+}
+
+.order-tray:hover {
+  overflow: overlay;
 }
 
 .order-tray td span {
@@ -76,21 +146,33 @@
 }
 
 .order-tray .table th {
-  border: 0;
+  /* border: 0; */
+  position: sticky;
+  top: 0;
+  background: white;
 }
 
 .order-tray h3 {
   padding: 10px;
   margin: 0;
 }
-/* 
-.table {
-  border-collapse: separate;
-  border-spacing: 5px 0;
+
+.order-tray::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px transparent;
+  border-radius: 10px;
+  background-color: transparent;
 }
 
+.order-tray::-webkit-scrollbar {
+  width: 5px;
+  left: 0;
+  background-color: transparent;
+}
 
-tr {
-  box-shadow: 0 0 0 2px #dee2e6;
-  border-radius: 2px;
-} */
+.order-tray::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 6px transparent;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+/* Order Layout CSS End */
