--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body {
 html,
 body {
   font-family: "Poppins", sans-serif;
+  height: 100%;
+  overflow: hidden;
 }
 
 code {
